@@ -47,7 +47,7 @@
      * ftp://ftp.nec.co.jp/pub/infosys/WWW/tools/cgiwrap/
      * ftp://ftp.rediris.es/mirror/ftp.doc.ac.ic.uk-is/WWW/tools/cgiwrap/
      * ftp://ftp.sunet.se/pub/security/tools/net/cgiwrap/
-     * ftp://ftp.tuwien.ac.at/pub/infosys/tools/tools1/cgiwrap/
+     * ftp://ftp.tuwien.ac.at/pub/infosys/tools/security/cgiwrap/
      *
        ftp://ftp.uni-magdeburg.de/pub/mirror/ftp.cert.dfn.de/tools/net/cgi
        wrap/
