@@ -6,8 +6,8 @@
   General Questions
   
    How do I subscribe/unsubscribe from the CGIWrap mailing list?
-          To subscribe, send a note containing "subscribe cgiwrap
-          FirstName LastName" to _listserv@rollanet.org_.
+          To subscribe, send a note containing "subscribe cgiwrap" to
+          _listserv@rollanet.org_.
           
           
           To unsubscribe, send a note containing "unsubscribe cgiwrap" to
