@@ -5,8 +5,7 @@
 <H3><A NAME="general">General Questions</H3>
 <DL>
 <P><DT>How do I subscribe/unsubscribe from the CGIWrap mailing list?
-	<DD>To subscribe, send a note containing "<TT>subscribe cgiwrap 
-FirstName LastName</TT>" to 
+	<DD>To subscribe, send a note containing "<TT>subscribe cgiwrap</TT>" to 
 <I><A HREF="mailto:listserv@rollanet.org">listserv@rollanet.org</A></I>. 
 	<P>
 	<DD>To unsubscribe, send a note containing "<TT>unsubscribe 
