@@ -10,6 +10,10 @@
      * Added support for checking if user has a valid shell, similar to
        what ftpd does. The BSD licensed getusershell.o has been included
        for support where needed.
+     * Bug fix for SEGV condition when certain syntax is used for the
+       request. It did not appear exploitable, but would cause cgiwrap to
+       core as root. Thanks to Michael Bryan (michael@blueneptune.com)
+       for the fix.
        
   New in version 3.6.2:
   
